# odoo-community-module-list

./: collect_modules.py  generate-md.py  pyproject.toml
module_collector/: __main__.py  collect_modules.py  settings.py
